# swarm

./: .clang-format  .clang-uml  .gitignore  Doxyfile  LICENSE  README.md  do-tests-and-coverage.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
UML/: mock_logging.hpp
UML/initial/: swarm_class_diagram.puml  swarm_sequence_diagram.puml
UML/revised/: swarm_class_diagram.puml  swarm_sequence_diagram.puml
reports/: Sprint_Planning_Notes.md  Sprint_Review_Notes.md
src/docs/html/: CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  classRobotControllerTest-members.html  classRobotControllerTest.html  classRobotControllerTest__inherit__graph.map  classRobotControllerTest__inherit__graph.md5  classRobotTopicsFixture-members.html  classRobotTopicsFixture.html  classRobotTopicsFixture__coll__graph.map  classRobotTopicsFixture__coll__graph.md5  classes.html  classswarm__controller_1_1RobotController-members.html  classswarm__controller_1_1RobotController.html  classswarm__controller_1_1RobotController__coll__graph.map  classswarm__controller_1_1RobotController__coll__graph.md5  classswarm__controller_1_1RobotController__inherit__graph.map  classswarm__controller_1_1RobotController__inherit__graph.md5  classswarm__model_1_1RobotFSM-members.html  classswarm__model_1_1RobotFSM.html  classswarm__model_1_1RobotFSM__coll__graph.map  classswarm__model_1_1RobotFSM__coll__graph.md5  classswarm__view_1_1RobotView-members.html  classswarm__view_1_1RobotView.html  classswarm__view_1_1RobotView__inherit__graph.map  classswarm__view_1_1RobotView__inherit__graph.md5  dir_000001_000003.html  dir_000001_000006.html  dir_000002_000003.html  dir_000002_000006.html  dir_000003_000006.html  dir_000004_000002.html  dir_000005_000002.html  dir_000009_000007.html  dir_000010_000007.html  dir_000014_000012.html  dir_018e1cfe74907288819c51c96836aff8.html  dir_3064af864a8a531b9aaf29af9eeaa38e.html  dir_3064af864a8a531b9aaf29af9eeaa38e_dep.map  dir_3064af864a8a531b9aaf29af9eeaa38e_dep.md5  (+111 more)
src/docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+21 more)
src/swarm_controller/: CMakeLists.txt  package.xml
src/swarm_controller/include/swarm_controller/: robot_controller.hpp
src/swarm_controller/src/: robot_controller.cpp  robot_controller_node.cpp
src/swarm_controller/test/: test_robot_controller.cpp
src/swarm_model/: CMakeLists.txt  package.xml
src/swarm_model/include/swarm_model/: robot_fsm.hpp
src/swarm_model/src/: robot_fsm.cpp
src/swarm_model/test/: robot_fsm_test.cpp
src/swarm_view/: CMakeLists.txt  package.xml
src/swarm_view/config/: swarm_config.yaml
src/swarm_view/include/swarm_view/: robot_view.hpp
src/swarm_view/launch/: swarm_view.launch.py  test_robot_topics.launch.py
src/swarm_view/resource/: epuck_driver.py  epuck_webots.urdf
src/swarm_view/src/: robot_view.cpp
src/swarm_view/test/: robot_topics_test.cpp
src/swarm_view/worlds/: empty_world_template.wbt
